# path_tracer_public

./: .gitignore  CMakeLists.txt  README  README.md  readme.txt
headers/: cyColor.h  cyCore.h  raytracer.h
scenes/: scene.xml
src/: lights.cpp  main.cpp  materials.cpp  objects.cpp  raytracer.cpp
